tests/priv-type-alias.chg.stderr

                throw new Error(`${ty.type} should not appear in llir lowering`);
                ^

Error: TyVid should not appear in llir lowering


    









